--- a/videoLocadoraSpring/src/main/resources/application.properties
+++ b/videoLocadoraSpring/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+server.error.include-stacktrace= never
+server.error.include-message= never
